--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://https://rwallan.github.io/myblog/'
 languageCode = 'pt-BR'
 title = 'Tempestade Mental do Richard'
 theme = 'anubis2'
