--- a/marmite.yaml
+++ b/marmite.yaml
@@ -5,9 +5,8 @@ pagination: 10
 menu:
   - ["Tags", "tags.html"]
   - ["Arquivo", "archive.html"]
-  - ["Autor", "authors.html"]
-  - ["Sobre", "about.html"]
   - ["GitHub", "https://github.com/RWallan"]
+  - ["Fediverse", "https://bolha.us/@rwallan"]
   - ["Feed", "index.rss"]
 
 toc: true
